--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html><body>P5<br>
+<html><link rel="stylesheet" type="text/css" href="index.css"><body>
+P5<br>
 #This is a portable greymap in pbmplus. D:M01419<br>
 54 52<br>
 53<br>
